remove storage endpoints
